manifests/project-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project
  template:
    metadata:
      labels:
        app: project
    spec:
      volumes:
        - name: persistent-data
          persistentVolumeClaim:
            claimName: project-data
      containers:
        - name: project
          image: hkotka/project
          imagePullPolicy: Always
          volumeMounts:
            - name: persistent-data
              mountPath: /img
