manifests/mainapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hashresponce-svc
spec:
  type: ClusterIP
  selector:
    app: hashgenerator
  ports:
    - port: 2345
      targetPort: 8080
      protocol: TCP
