manifests/mainapp.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: main-app
---
apiVersion: v1
kind: Service
metadata:
  name: hashresponce-svc
  namespace: main-app
spec:
  type: ClusterIP
  selector:
    app: hashgenerator
  ports:
    - port: 2345
      targetPort: 8080
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hashgenerator
  namespace: main-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hashgenerator
  template:
    metadata:
      labels:
        app: hashgenerator
    spec:
      volumes:
        - name: common-data
          persistentVolumeClaim:
            claimName: common-data
      containers:
        - name: hashgenerator-server
          image: hkotka/main-app1
          imagePullPolicy: Always
          volumeMounts:
            - name: common-data
              mountPath: /common-data
        - name: timestamper
          image: hkotka/main-app2
          imagePullPolicy: Always
          volumeMounts:
            - name: common-data
              mountPath: /common-data
---
apiVersion: v1
kind: Service
metadata:
  name: pingpong-svc
  namespace: main-app
spec:
  type: ClusterIP
  selector:
    app: pingpong
  ports:
    - port: 2346
      targetPort: 8080
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingpong
  namespace: main-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pingpong
  template:
    metadata:
      labels:
        app: pingpong
    spec:
      containers:
        - name: pingpong
          image: hkotka/ping-pong
          imagePullPolicy: Always
