manifests/project-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: project-svc
spec:
  type: ClusterIP
  selector:
    app: project
  ports:
    - port: 2347
      targetPort: 8080
      protocol: TCP
