manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: main-app-ingress
  namespace: main-app
spec:
  rules:
    - http:
        paths:
          - path: /main
            backend:
              serviceName: hashresponce-svc
              servicePort: 2345
          - path: /pingpong
            backend:
              serviceName: pingpong-svc
              servicePort: 2346
          - path: /pongcount
            backend:
              serviceName: pingpong-svc
              servicePort: 2346
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: project-ingress
  namespace: project
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: project-frontend-svc
              servicePort: 2347
          - path: /todos
            backend:
              serviceName: project-backend-svc
              servicePort: 2348
          - path: /images
              backend:
                serviceName: project-backend-svc
                servicePort: 2348
