manifests/mainapp-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hashgenerator-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: hashresponce-svc
              servicePort: 2345
