manifests/project-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: project-ingress
spec:
  rules:
    - http:
        paths:
          - path: /project
            pathType: Prefix
            backend:
              serviceName: project-svc
              servicePort: 2347
